basic component for windows

--- a/CG Project.vcxproj
+++ b/CG Project.vcxproj
@@ -129,16 +129,19 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="src\input.cpp" />
     <ClCompile Include="src\glad.c" />
     <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\playerInput.cpp" />
+    <ClCompile Include="src\shader.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\glad\glad.h" />
     <ClInclude Include="include\GLFW\glfw3.h" />
     <ClInclude Include="include\GLFW\glfw3native.h" />
-    <ClInclude Include="include\Input\input.h" />
     <ClInclude Include="include\KHR\khrplatform.h" />
+    <ClInclude Include="include\playerInput\playerInput.h" />
+    <ClInclude Include="include\shader\shader.h" />
+    <ClInclude Include="include\stb\stb_image.h" />
     <ClInclude Include="resource.h" />
   </ItemGroup>
   <ItemGroup>
