--- a/CG Project.vcxproj
+++ b/CG Project.vcxproj
@@ -131,17 +131,23 @@
   <ItemGroup>
     <ClCompile Include="src\glad.c" />
     <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\player.cpp" />
     <ClCompile Include="src\playerInput.cpp" />
-    <ClCompile Include="src\shader.cpp" />
+    <ClCompile Include="src\stb_image.cpp" />
+    <ClCompile Include="src\texture.cpp" />
+    <ClCompile Include="src\world.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\glad\glad.h" />
     <ClInclude Include="include\GLFW\glfw3.h" />
     <ClInclude Include="include\GLFW\glfw3native.h" />
     <ClInclude Include="include\KHR\khrplatform.h" />
-    <ClInclude Include="include\playerInput\playerInput.h" />
+    <ClInclude Include="include\player\player.h" />
+    <ClInclude Include="include\player\playerInput.h" />
     <ClInclude Include="include\shader\shader.h" />
     <ClInclude Include="include\stb\stb_image.h" />
+    <ClInclude Include="include\texture\texture.h" />
+    <ClInclude Include="include\world\world.h" />
     <ClInclude Include="resource.h" />
   </ItemGroup>
   <ItemGroup>
