--- a/CG Project.vcxproj.filters
+++ b/CG Project.vcxproj.filters
@@ -24,7 +24,16 @@
     <ClCompile Include="src\playerInput.cpp">
       <Filter>File di origine</Filter>
     </ClCompile>
-    <ClCompile Include="src\shader.cpp">
+    <ClCompile Include="src\player.cpp">
+      <Filter>File di origine</Filter>
+    </ClCompile>
+    <ClCompile Include="src\world.cpp">
+      <Filter>File di origine</Filter>
+    </ClCompile>
+    <ClCompile Include="src\stb_image.cpp">
+      <Filter>File di origine</Filter>
+    </ClCompile>
+    <ClCompile Include="src\texture.cpp">
       <Filter>File di origine</Filter>
     </ClCompile>
   </ItemGroup>
@@ -44,13 +53,22 @@
     <ClInclude Include="resource.h">
       <Filter>File di intestazione</Filter>
     </ClInclude>
-    <ClInclude Include="include\playerInput\playerInput.h">
+    <ClInclude Include="include\player\playerInput.h">
       <Filter>File di intestazione</Filter>
     </ClInclude>
     <ClInclude Include="include\shader\shader.h">
       <Filter>File di intestazione</Filter>
     </ClInclude>
     <ClInclude Include="include\stb\stb_image.h">
+      <Filter>File di intestazione</Filter>
+    </ClInclude>
+    <ClInclude Include="include\player\player.h">
+      <Filter>File di intestazione</Filter>
+    </ClInclude>
+    <ClInclude Include="include\world\world.h">
+      <Filter>File di intestazione</Filter>
+    </ClInclude>
+    <ClInclude Include="include\texture\texture.h">
       <Filter>File di intestazione</Filter>
     </ClInclude>
   </ItemGroup>
