--- a/CG Project.vcxproj
+++ b/CG Project.vcxproj
@@ -130,10 +130,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="src\camera\camera.cpp" />
+    <ClCompile Include="src\chest\chest.cpp" />
+    <ClCompile Include="src\collision\collision.cpp" />
     <ClCompile Include="src\glad.c" />
     <ClCompile Include="src\main.cpp" />
-    <ClCompile Include="src\models\mesh.cpp" />
-    <ClCompile Include="src\models\model.cpp" />
     <ClCompile Include="src\player\player.cpp" />
     <ClCompile Include="src\player\playerInput.cpp" />
     <ClCompile Include="src\resourceManager\resourceManager.cpp" />
@@ -148,8 +148,8 @@
     <ClInclude Include="include\GLFW\glfw3.h" />
     <ClInclude Include="include\GLFW\glfw3native.h" />
     <ClInclude Include="include\KHR\khrplatform.h" />
-    <ClInclude Include="src\models\mesh.h" />
-    <ClInclude Include="src\models\model.h" />
+    <ClInclude Include="src\chest\chest.h" />
+    <ClInclude Include="src\collision\collision.h" />
     <ClInclude Include="src\player\player.h" />
     <ClInclude Include="src\player\playerInput.h" />
     <ClInclude Include="src\resourceManager\resourceManager.h" />
